fixes + sonarqube test